# randrctl

./: .gitignore  .pyproject.toml.swp  .travis.yml  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
distrib/archlinux/: PKGBUILD
etc/completion/: randrctl.bash  randrctl.zsh
etc/randrctl/: config.ini
etc/randrctl/profiles/examples/: default
etc/udev/rules.d/: 99-monitor-hotplug.rules  99-randrctl.rules
randrctl/: __init__.py  __main__.py  cli.py  context.py  ctl.py  exception.py  hotplug.py  model.py  profile.py  setuid-test.py  xrandr.py
randrctl/misc/: 99-randrctl.rules  config.yaml
randrctl/misc/completion/bash/: randrctl
randrctl/setup/: config.yaml
randrctl/tests/: __init__.py  profile_example  test_context.py  test_ctl.py  test_hotplug.py  test_profile.py  test_xrandr.py
randrctl/tests/sys/test/card0/card0-DP-1/: edid
randrctl/tests/sys/test/card0/card0-LVDS-1/: edid
tests/: simple_profile_example  test_context.py  test_model.py  test_profile.py  test_xrandr.py
