[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "randrctl"
description = "Profile based screen manager for X"
authors = [
    { name = "Dmytro Kostiuchenko" }
]
license = { text = "GPL-3.0" }
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
    "Topic :: Utilities"
]
dependencies = [
    "argcomplete",
    "PyYAML"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/koiuo/randrctl"
Repository = "https://github.com/koiuo/randrctl"
Issues = "https://github.com/koiuo/randrctl/issues"

[project.scripts]
randrctl = "randrctl.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=3.4.2"
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["randrctl"]
