[metadata]
name = randrctl
author = Dmytro Kostiuchenko
author_email = edio@archlinux.us
home-page = http://github.com/edio/randrctl
license = GPLv3
summary = Profile based screen manager for X
platform = linux

[facilities]
auto-version = 1
auto-description = true
auto-license = true
auto-package-data=true

[auto-version]
type = git-pep440

[files]
scripts = bin/*
extra_files = misc/**/*
