[metadata]
name = randrctl
author = Dmytro Kostiuchenko
author_email = edio@archlinux.us
license = GPLv3
summary = Profile based screen manager for X
platform = linux
home-page = https://github.com/edio/randrctl

[entry_points]
console_scripts =
    randrctl = randrctl.cli:main

[pbr]
skip_authors=true
skip_changelog=true

